# SlicerGestureRecognition

./: README.md
SlicerGestureRecognition/: CMakeLists.txt
SlicerGestureRecognition/GestureRecognition/: CMakeLists.txt  qSlicerGestureRecognitionModuleWidget.cxx  qSlicerGestureRecognitionModuleWidget.h
SlicerGestureRecognition/GestureRecognition/Logic/: vtkSlicerGestureRecognitionLogic.cxx  vtkSlicerGestureRecognitionLogic.h
SlicerGestureRecognition/GestureRecognition/Resources/UI/: qSlicerGestureRecognitionModuleWidget.ui
